# rk4-simulator

./: CMakeLists.txt  LICENSE  README.md  controller.cpp  controller.h  dynamics.cpp  dynamics.h  param.h  runge_kutta.h  sim_runge_kutta.cpp
graph/: PlotData.py
